# multimodal-cell

./: .gitignore  Makefile  main.py  pyproject.toml  train.py
data/: create_indptr.pyx  sparse_matrix.py  svd.py
models/: citeseq.py  multiome.py  optimisation.py
notebooks/: eda.ipynb
utils/: decorators.py  metrics.py
visualisation/: graphs.py
