[tool.poetry]
name = "multimodal-cell"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9,<3.12"
numpy = "^1.23.3"
scikit-learn = "^1.1.2"
matplotlib = "^3.5.3"
lightgbm = "^3.3.2"
pandas = "^1.4.4"
scipy = "^1.9.1"
jupyter = "^1.0.0"
tables = "^3.7.0"
seaborn = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
